--- a/manifest.json
+++ b/manifest.json
@@ -5,9 +5,9 @@
 "background_color": "#ffffff",
 "theme_color": "#00FF00",
 "icons": [
-{ "src": "icons8-durian-64.png",
+{ "src": "images/alien.png",
 "sizes": "192x192",
-"type": "image/alien.png"
+"type": "image/png"
 }
 ]
 }
